<?xml version="1.0"?>
<package format="3">
  <name>custom_msg</name>
  <version>0.1.0</version>
  <description>ROS2 自定义消息 Demo — 对应 DDS VehicleState IDL</description>
  <maintainer email="user@example.com">lixin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
